--- a/tour.html
+++ b/tour.html
@@ -29,6 +29,10 @@
 </head>
 <body>
 
+
+
+
+
     <div id="mobile-menu" class="uk-offcanvas">
         <div class="uk-offcanvas-bar uk-offcanvas-bar-flip">
             <div class="uk-text-center padding-top-bottom-30">
@@ -210,8 +214,20 @@
                 <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-1">
                     
                     <div class="" data-uk-sticky="{top:40, boundary: true}">
+                        <div class="back-yellow padding-left-30 padding-right-30 padding-top-20 padding-bottom-20">
+                            <ul class="uk-list uk-list-line uk-list-space text-uppercase sidebar-info uk-margin-remove">
+                                <li>
+                                    <div class=" text-black">  
+                                        <span class="text-uppercase text-10 uk-text-bold">Аялалын код:</span>
+                                        <div class="uk-margin-remove uk-text-bold text-22">PT1</div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                         <div class="back-gradient padding-30 uk-text-left" >
+
                             <ul class="uk-list uk-list-line uk-list-space text-uppercase sidebar-info">
+                                
                                 <li>
                                     <div class=" text-white">  
                                         <span class="text-uppercase text-10 uk-text-bold">Үргэлжлэх хугацаа:</span>
