--- a/tours.html
+++ b/tours.html
@@ -256,9 +256,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">1300$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">АЛТАН ГОВЬ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -272,9 +275,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">3100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">ST6</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ХӨВСГӨЛ ЭЭЖ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -288,9 +294,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">1700$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">HT8</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ТҮҮХЭН НИЙСЛЭЛ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -304,9 +313,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">TS12</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ГОВЬ ХАНГАЙН ХЯЗГААР</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -320,9 +332,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">HD72</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">АГУУ ЦАЙНЫ ЗАМ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -336,9 +351,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">HT23</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">Үзэсгэлэнт говийн шөнийн байгаль</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -352,9 +370,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">TR5</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">Монгол айлд зочлоё</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -368,9 +389,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">1300$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">АЛТАН ГОВЬ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -384,9 +408,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">3100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ХӨВСГӨЛ ЭЭЖ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -400,9 +427,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">1700$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ТҮҮХЭН НИЙСЛЭЛ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -416,9 +446,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">ГОВЬ ХАНГАЙН ХЯЗГААР</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
@@ -432,9 +465,12 @@
                                     <img src="img/category-icon.png" width="25"> &nbsp; Үндсэн аялал
 
                                     <div class="" style="position: absolute; bottom: 20px;">
-                                        <span class="uk-text-bold text-14 text-uppercase">2100$</span>
-                                        <hr class="border-yellow border-30">
+                                        <div class="margin-bottom-10">
+                                            <span class="uk-text-bold text-14 text-uppercase text-white back-yellow text-black" style="padding: 2px 5px 2px 5px;">PT1</span>  &nbsp; &middot; &nbsp; 
+                                            <span class="uk-text-bold text-14 text-uppercase">1300$</span>
+                                        </div>
                                         <h5 class="uk-text-bold text-uppercase uk-margin-remove text-16 tour-title">АГУУ ЦАЙНЫ ЗАМ</h5>
+                                        <hr class="border-yellow border-30">
                                         <span class="text-11">2200 км</span> &nbsp; &middot; &nbsp; <span class="text-11">11 өдөр</span>
                                     </div>
                                 </figcaption>
